<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/logout_button"
            android:text="@string/logout_button"
            android:onClick="logout"
            android:drawableLeft="@drawable/robot_off"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/text_to_say"
            android:text="@string/text_to_say"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/say_button"
            android:onClick=""
            android:drawableLeft="@drawable/say"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

    <!-- SIT / STAND UP -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/sit_ground_button"
            android:text="@string/sit_ground_button"
            android:onClick=""
            android:drawableLeft="@drawable/sit_ground"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/stand_up_button"
            android:text="@string/stand_up_button"
            android:onClick=""
            android:drawableRight="@drawable/stand"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

    <!-- GO FORWARD -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/go_forward_left_button"
            android:onClick=""
            android:background="@drawable/arrow_up_left"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/go_forward_button"
            android:onClick=""
            android:background="@drawable/arrow_up"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/go_forward_right_button"
            android:onClick=""
            android:background="@drawable/arrow_up_right"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>


    <!-- STEP/TURN LEFT/RIGHT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/go_left_button"
            android:onClick=""
            android:background="@drawable/arrow_left"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/turn_left_button"
            android:onClick=""
            android:background="@drawable/arrow_left_down"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/turn_right_button"
            android:onClick=""
            android:background="@drawable/arrow_right_down"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/go_right_button"
            android:onClick=""
            android:background="@drawable/arrow_right"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

    <!-- GO BACKWARD -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/go_down_left_button"
            android:onClick=""
            android:background="@drawable/arrow_down_left"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/go_down_button"
            android:onClick=""
            android:background="@drawable/arrow_down"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/go_down_right_button"
            android:onClick=""
            android:background="@drawable/arrow_down_right"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>